# py-tradekit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: Broker.py  IDataProvider.py  IModel.py
src/pytrade/: Broker.py  IDataProvider.py  IModel.py  __init__.py
src/pytrade/enum/: Action.py  Contract.py  __init__.py
src/pytrade/model/: Signal.py  __init__.py
src/pytrade/schema/: HistoricalQuery.py  SignalDto.py  TradeDto.py  ValueDto.py  __init__.py
src/schema/: HistoricalDataDto.py  SignalDto.py  TradeDto.py
test/: test_Signal.py
