[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrade"
version = "1.1.0"
authors = [
  { name="Mason", email="mason@hicksm.dev" },
]
description = "Python toolkit for stock trading."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic >= 2.8.2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytrade*"]

[project.urls]
Homepage = "https://github.com/mwhicks-dev/py-tradekit"
Issues = "https://github.com/mwhicks-dev/py-tradekit/issues"